WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270023
AX: VoiceOver frames are broken on ToT
https://bugs.webkit.org/show_bug.cgi?id=270023
Summary
AX: VoiceOver frames are broken on ToT
Joshua Hoffman
Reported
2024-02-23 15:55:47 PST
After
274955@main
, VoiceOver frames stopped working in isolated tree mode.
Attachments
Patch
(2.78 KB, patch)
2024-02-23 16:08 PST
,
Joshua Hoffman
no flags
Details
Formatted Diff
Diff
Patch
(2.77 KB, patch)
2024-02-23 16:27 PST
,
Joshua Hoffman
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-23 15:55:55 PST
<
rdar://problem/123534425
>
Joshua Hoffman
Comment 2
2024-02-23 16:08:05 PST
Created
attachment 470037
[details]
Patch
chris fleizach
Comment 3
2024-02-23 16:19:19 PST
Comment on
attachment 470037
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=470037&action=review
> Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.cpp:1294 > + if (relativeFrame == FloatRect()) {
is there an isEmpty() or isUnset() method you can call?
Joshua Hoffman
Comment 4
2024-02-23 16:27:47 PST
Created
attachment 470038
[details]
Patch
Joshua Hoffman
Comment 5
2024-02-23 16:28:04 PST
Comment on
attachment 470037
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=470037&action=review
>> Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.cpp:1294 >> + if (relativeFrame == FloatRect()) { > > is there an isEmpty() or isUnset() method you can call?
Yes, updated!
EWS
Comment 6
2024-02-24 20:03:13 PST
Committed
275290@main
(ba3ffca7609b): <
https://commits.webkit.org/275290@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 470038
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug