AX: VoiceOver frames are broken on ToT https://bugs.webkit.org/show_bug.cgi?id=270023 rdar://problem/123534425

Reviewed by Chris Fleizach.

After 274955@main, we never returned cached relative frames, resulting in all frames being the same
as the WebArea's. This patch fixes frames, and resolves the failing test, initial-relative-frame-cached.html.

* Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::relativeFrame const):

Canonical link: https://commits.webkit.org/275290@main